--- a/information/english/index.html
+++ b/information/english/index.html
@@ -27,15 +27,15 @@
 <body>
   <h1>Bộ ảnh (1 cột dọc)</h1>
   <div class="image-container">
-    <img src="https://picsum.photos/id/1015/800/500" alt="Ảnh 1">
-    <img src="https://picsum.photos/id/1016/800/500" alt="Ảnh 2">
-    <img src="https://picsum.photos/id/1018/800/500" alt="Ảnh 3">
-    <img src="https://picsum.photos/id/1019/800/500" alt="Ảnh 4">
-    <img src="https://picsum.photos/id/1020/800/500" alt="Ảnh 5">
-    <img src="https://picsum.photos/id/1021/800/500" alt="Ảnh 6">
-    <img src="https://picsum.photos/id/1022/800/500" alt="Ảnh 7">
-    <img src="https://picsum.photos/id/1023/800/500" alt="Ảnh 8">
-    <img src="https://picsum.photos/id/1024/800/500" alt="Ảnh 9">
+    <img src="https://github.com/btadev/calidas/blob/main/information/english/images/Room%20Introduce_QR%20code-01.jpg" alt="Ảnh 1">
+    <img src="https://github.com/btadev/calidas/blob/main/information/english/images/Room%20Introduce_QR%20code-02.jpg" alt="Ảnh 2">
+    <img src="https://github.com/btadev/calidas/blob/main/information/english/images/Room%20Introduce_QR%20code-03.jpg" alt="Ảnh 3">
+    <img src="https://github.com/btadev/calidas/blob/main/information/english/images/Room%20Introduce_QR%20code-04.jpg" alt="Ảnh 4">
+    <img src="https://github.com/btadev/calidas/blob/main/information/english/images/Room%20Introduce_QR%20code-05.jpg" alt="Ảnh 5">
+    <img src="https://github.com/btadev/calidas/blob/main/information/english/images/Room%20Introduce_QR%20code-06.jpg" alt="Ảnh 6">
+    <img src="https://github.com/btadev/calidas/blob/main/information/english/images/Room%20Introduce_QR%20code-07.jpg" alt="Ảnh 7">
+    <img src="https://github.com/btadev/calidas/blob/main/information/english/images/Room%20Introduce_QR%20code-08.jpg" alt="Ảnh 8">
+    <img src="https://github.com/btadev/calidas/blob/main/information/english/images/Room%20Introduce_QR%20code-09.jpg" alt="Ảnh 9">
   </div>
 </body>
 </html>
