--- a/information/english/index.html
+++ b/information/english/index.html
@@ -11,6 +11,9 @@
       padding: 20px;
       background-color: #f9f9f9;
     }
+    h1 {
+    text-align: center;
+    }
     .image-container {
       display: flex;
       flex-direction: column;
