--- a/information/english/slideshow.html
+++ b/information/english/slideshow.html
@@ -16,13 +16,18 @@
       position: relative;
       width: 100vw;
       height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
     }
 
     .slideshow-container img {
-      width: 100%;
-      height: 100vh;
-      object-fit: cover;
-      display: block;
+      max-width: 100%;
+      max-height: 100%;
+      width: auto;
+      height: auto;
+      border-radius: 8px;
+      box-shadow: 0 0 20px rgba(0,0,0,0.5);
     }
 
     .nav-arrow {
@@ -57,20 +62,20 @@
 <div class="slideshow-container">
   <div class="nav-arrow nav-left" onclick="changeSlide(-1)">&#10094;</div>
   <div class="nav-arrow nav-right" onclick="changeSlide(1)">&#10095;</div>
-  <img id="slideshow" src="https://picsum.photos/id/1015/1920/1080" alt="Slideshow">
+  <img id="slideshow" src="https://raw.githubusercontent.com/btadev/calidas/main/information/english/images/Room%20Introduce_QR%20code-01.jpg" alt="Slideshow">
 </div>
 
 <script>
   const images = [
     "https://raw.githubusercontent.com/btadev/calidas/main/information/english/images/Room%20Introduce_QR%20code-01.jpg",
-    "https://raw.githubusercontent.com/btadev/calidas/main/information/english/images/Room%20Introduce_QR%20code-01.jpg",
-    "https://raw.githubusercontent.com/btadev/calidas/main/information/english/images/Room%20Introduce_QR%20code-01.jpg",
-    "https://raw.githubusercontent.com/btadev/calidas/main/information/english/images/Room%20Introduce_QR%20code-01.jpg",
-    "https://raw.githubusercontent.com/btadev/calidas/main/information/english/images/Room%20Introduce_QR%20code-01.jpg",
-    "https://raw.githubusercontent.com/btadev/calidas/main/information/english/images/Room%20Introduce_QR%20code-01.jpg",
-    "https://raw.githubusercontent.com/btadev/calidas/main/information/english/images/Room%20Introduce_QR%20code-01.jpg",
-    "https://raw.githubusercontent.com/btadev/calidas/main/information/english/images/Room%20Introduce_QR%20code-01.jpg",
-    "https://raw.githubusercontent.com/btadev/calidas/main/information/english/images/Room%20Introduce_QR%20code-01.jpg"
+    "https://raw.githubusercontent.com/btadev/calidas/main/information/english/images/Room%20Introduce_QR%20code-02.jpg",
+    "https://raw.githubusercontent.com/btadev/calidas/main/information/english/images/Room%20Introduce_QR%20code-03.jpg",
+    "https://raw.githubusercontent.com/btadev/calidas/main/information/english/images/Room%20Introduce_QR%20code-04.jpg",
+    "https://raw.githubusercontent.com/btadev/calidas/main/information/english/images/Room%20Introduce_QR%20code-05.jpg",
+    "https://raw.githubusercontent.com/btadev/calidas/main/information/english/images/Room%20Introduce_QR%20code-06.jpg",
+    "https://raw.githubusercontent.com/btadev/calidas/main/information/english/images/Room%20Introduce_QR%20code-07.jpg",
+    "https://raw.githubusercontent.com/btadev/calidas/main/information/english/images/Room%20Introduce_QR%20code-08.jpg",
+    "https://raw.githubusercontent.com/btadev/calidas/main/information/english/images/Room%20Introduce_QR%20code-09.jpg"
   ];
   let currentIndex = 0;
 
