--- a/information/korean/index.html
+++ b/information/korean/index.html
@@ -30,15 +30,15 @@
 <body>
   <h1>CALIDAS 정보</h1>
   <div class="image-container">
-    <img src="https://raw.githubusercontent.com/btadev/calidas/main/information/english/images/Room%20Introduce_QR%20code-01.jpg" alt="Ảnh 1">
-    <img src="https://raw.githubusercontent.com/btadev/calidas/main/information/english/images/Room%20Introduce_QR%20code-02.jpg" alt="Ảnh 2">
-    <img src="https://raw.githubusercontent.com/btadev/calidas/main/information/english/images/Room%20Introduce_QR%20code-03.jpg" alt="Ảnh 3">
-    <img src="https://raw.githubusercontent.com/btadev/calidas/main/information/english/images/Room%20Introduce_QR%20code-04.jpg" alt="Ảnh 4">
-    <img src="https://raw.githubusercontent.com/btadev/calidas/main/information/english/images/Room%20Introduce_QR%20code-05.jpg" alt="Ảnh 5">
-    <img src="https://raw.githubusercontent.com/btadev/calidas/main/information/english/images/Room%20Introduce_QR%20code-06.jpg" alt="Ảnh 6">
-    <img src="https://raw.githubusercontent.com/btadev/calidas/main/information/english/images/Room%20Introduce_QR%20code-07.jpg" alt="Ảnh 7">
-    <img src="https://raw.githubusercontent.com/btadev/calidas/main/information/english/images/Room%20Introduce_QR%20code-08.jpg" alt="Ảnh 8">
-    <img src="https://raw.githubusercontent.com/btadev/calidas/main/information/english/images/Room%20Introduce_QR%20code-09.jpg" alt="Ảnh 9">
+    <img src="https://raw.githubusercontent.com/btadev/calidas/main/information/korean/images/Room%20Introduce_QR%20code_KOR-01.jpg" alt="Ảnh 1">
+    <img src="https://raw.githubusercontent.com/btadev/calidas/main/information/korean/images/Room%20Introduce_QR%20code_KOR-02.jpg" alt="Ảnh 2">
+    <img src="https://raw.githubusercontent.com/btadev/calidas/main/information/korean/images/Room%20Introduce_QR%20code_KOR-03.jpg" alt="Ảnh 3">
+    <img src="https://raw.githubusercontent.com/btadev/calidas/main/information/korean/images/Room%20Introduce_QR%20code_KOR-04.jpg" alt="Ảnh 4">
+    <img src="https://raw.githubusercontent.com/btadev/calidas/main/information/korean/images/Room%20Introduce_QR%20code_KOR-05.jpg" alt="Ảnh 5">
+    <img src="https://raw.githubusercontent.com/btadev/calidas/main/information/korean/images/Room%20Introduce_QR%20code_KOR-06.jpg" alt="Ảnh 6">
+    <img src="https://raw.githubusercontent.com/btadev/calidas/main/information/korean/images/Room%20Introduce_QR%20code_KOR-07.jpg" alt="Ảnh 7">
+    <img src="https://raw.githubusercontent.com/btadev/calidas/main/information/korean/images/Room%20Introduce_QR%20code_KOR-08.jpg" alt="Ảnh 8">
+    <img src="https://raw.githubusercontent.com/btadev/calidas/main/information/korean/images/Room%20Introduce_QR%20code_KOR-09.jpg" alt="Ảnh 9">
   </div>
 </body>
 </html>
